feat: material design

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -1,19 +1,20 @@
-/* prettier-ignore */
+@import vuetify-material/appbar
+
 .v-btn.v-size--default,
 .v-btn.v-size--large
-&:not(.v-btn--icon):not(.v-btn--fab)
+  &:not(.v-btn--icon):not(.v-btn--fab)
     padding: 0 30px !important
 
 .theme--light.v-list-item .v-list-item__action-text,
 .theme--light.v-list-item .v-list-item__subtitle
-    color: #999
+  color: #999
 
 .theme--light.v-text-field>.v-input__control>.v-input__slot:before
-    border-color: #d2d2d2
+  border-color: #d2d2d2
 
 .v-label.v-label,
 .v-alert.v-alert
-    font-size: $font-size-root
+  font-size: 14px
 
 .theme--light .v-content
-    background-color: #eee
+  background-color: #eee
