refactor: footer position and width

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -18,3 +18,8 @@
 
 .theme--light .v-content
   background-color: #eee
+
+.v-footer
+  width: 100%
+  align-items: end !important
+  background-color: #fff
