refactor: vuetify footer scss

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -1,4 +1,5 @@
 @import vuetify-material/appbar
+@import vuetify-material/footer
 
 .v-btn.v-size--default,
 .v-btn.v-size--large
@@ -18,8 +19,3 @@
 
 .theme--light .v-content
   background-color: #eee
-
-.v-footer
-  width: 100%
-  align-items: flex-end !important
-  background-color: #fff
