fix: v-content deprecated

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -1,3 +1,4 @@
+@import vuetify-material/sidebar
 @import vuetify-material/appbar
 @import vuetify-material/footer
 
@@ -17,5 +18,5 @@
 .v-alert.v-alert
   font-size: 14px
 
-.theme--light .v-content
-  background-color: #eee
+.theme--light .v-container
+  background-color: #eee !important
