--- a/web/src/styles/vuetify-material/_footer.sass
+++ b/web/src/styles/vuetify-material/_footer.sass
@@ -1,9 +1,10 @@
 .v-footer
-  padding: 20px 0 20px 4px
+  background-color: #eee !important
+  padding: 20px 0px 20px 4px
   border-top: 1px solid #e7e7e7 !important
   position: relative
   width: 100%
-  align-items: flex-end !important
+  align-items: end !important
   a
     padding: 0px 18px 15px 0px
     font-size: 15px !important
