--- a/web/src/styles/vuetify-material/_footer.sass
+++ b/web/src/styles/vuetify-material/_footer.sass
@@ -1,5 +1,4 @@
 .v-footer
-  background-color: #eee !important
   padding: 20px 0px 20px 4px
   border-top: 1px solid #e7e7e7 !important
   position: relative
@@ -24,8 +23,8 @@
   &.v-footer--absolute
     position: absolute !important
 
-.theme--light.v-footer
-  background-color: transparent
+.v-footer
+  background-color: #f5f5f5 !important
   .body-1
     color: #3c4858
   .v-icon
