--- a/web/src/styles/vuetify-material/_sidebar.sass
+++ b/web/src/styles/vuetify-material/_sidebar.sass
@@ -1,17 +1,17 @@
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list-item .v-list-item__content .v-list-item__title.display-2
   font-size: 18px !important
-  margin-top: 12px
-  margin-bottom: 12px
+  margin-top: 12px !important
+  margin-bottom: 12px !important
 
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list .v-list-group .v-list-group__header .v-list-item__content .v-list-item__title
-  font-size: 14px
-  font-weight: 300
+  font-size: 14px !important
+  font-weight: 300 !important
 
 .v-application--is-ltr .v-list-item__avatar:first-child
   margin-right: 11px
 
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list-item__icon.v-list-group__header__append-icon .v-icon
-  font-size: 19px
+  font-size: 19px !important
 
 .v-application--is-ltr #core-navigation-drawer div.v-list-item__icon--text,
 .v-application--is-ltr #core-navigation-drawer div.v-list-item__icon:first-child
@@ -22,18 +22,23 @@
 .v-application--is-ltr .v-list-item__action:last-of-type:not(:only-child),
 .v-application--is-ltr .v-list-item__avatar:last-of-type:not(:only-child),
 .v-application--is-ltr .v-list-item__icon:last-of-type:not(:only-child)
-  margin-right: 2px
+  margin-right: 2px !important
 
 .v-list--nav.v-list--dense .v-list-item:not(:last-child):not(:only-child),
 .v-list--nav .v-list-item--dense:not(:last-child):not(:only-child),
 .v-list--rounded.v-list--dense .v-list-item:not(:last-child):not(:only-child),
 .v-list--rounded .v-list-item--dense:not(:last-child):not(:only-child)
-  margin-bottom: 3px
+  margin-bottom: 3px !important
 
-.v-list-item .v-list-item__title, .v-list-item .v-list-item__subtitle
-  line-height: 1.2
-  font-weight: 300
-  font-size: 14px
+// .v-list-item .v-list-item__title, .v-list-item .v-list-item__subtitle
+//   line-height: 1.2
+//   font-weight: 300
+//   font-size: 14px
+
+.v-list--nav .v-list-item-title
+  line-height: 1.2 !important
+  font-weight: 300 !important
+  font-size: 14px !important
 
 .v-list-group__items .v-list-item
   font-size: 13px
