feat: login page

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -1,6 +1,9 @@
 @import vuetify-material/sidebar
 @import vuetify-material/appbar
+@import vuetify-material/view
 @import vuetify-material/footer
+@import vuetify-material/card
+@import vuetify-material/tab
 
 .v-btn.v-size--default,
 .v-btn.v-size--large
