--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -17,6 +17,9 @@
 .theme--light.v-text-field>.v-input__control>.v-input__slot:before
   border-color: #d2d2d2
 
+.v-input__details
+  margin-bottom: 0px !important
+
 .v-label.v-label,
 .v-alert.v-alert
   font-size: 14px
