feat: btn style

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -4,6 +4,7 @@
 @import vuetify-material/footer
 @import vuetify-material/card
 @import vuetify-material/tab
+@import vuetify-material/buttons
 
 .v-btn.v-size--default,
 .v-btn.v-size--large
