fix: esbuild-linux-64 could not found

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -1,4 +1,4 @@
-@import vuetify-material/sidebar
+// @import vuetify-material/sidebar
 @import vuetify-material/appbar
 @import vuetify-material/view
 @import vuetify-material/footer
