--- a/web/src/styles/vuetify-material/_footer.sass
+++ b/web/src/styles/vuetify-material/_footer.sass
@@ -1,12 +1,12 @@
 .v-footer
-  padding: 20px 0px 20px 4px
+  // padding: 20px 0 20px 4px
   border-top: 1px solid #e7e7e7 !important
-  position: relative
+  background-color: #f5f5f5 !important
   width: 100%
-  align-items: end !important
+  // position: relative
   a
-    padding: 0px 18px 15px 0px
-    font-size: 15px !important
+    padding: 15px 18px 15px 16px
+    font-size: 12px !important
   .body-1
     font-size: 16px !important
     padding-right: 18px
@@ -23,8 +23,8 @@
   &.v-footer--absolute
     position: absolute !important
 
-.v-footer
-  background-color: #f5f5f5 !important
+.theme--light.v-footer
+  background-color: transparent
   .body-1
     color: #3c4858
   .v-icon
