fix: drawer in prod output

--- a/web/src/styles/vuetify-material/_sidebar.sass
+++ b/web/src/styles/vuetify-material/_sidebar.sass
@@ -1,17 +1,17 @@
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list-item .v-list-item__content .v-list-item__title.display-2
   font-size: 18px !important
-  margin-top: 12px !important
-  margin-bottom: 12px !important
+  margin-top: 12px
+  margin-bottom: 12px
 
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list .v-list-group .v-list-group__header .v-list-item__content .v-list-item__title
-  font-size: 14px !important
-  font-weight: 300 !important
+  font-size: 14px
+  font-weight: 300
 
 .v-application--is-ltr .v-list-item__avatar:first-child
   margin-right: 11px
 
 .v-application .v-navigation-drawer .v-navigation-drawer__content .v-list-item__icon.v-list-group__header__append-icon .v-icon
-  font-size: 19px !important
+  font-size: 19px
 
 .v-application--is-ltr #core-navigation-drawer div.v-list-item__icon--text,
 .v-application--is-ltr #core-navigation-drawer div.v-list-item__icon:first-child
@@ -22,20 +22,15 @@
 .v-application--is-ltr .v-list-item__action:last-of-type:not(:only-child),
 .v-application--is-ltr .v-list-item__avatar:last-of-type:not(:only-child),
 .v-application--is-ltr .v-list-item__icon:last-of-type:not(:only-child)
-  margin-right: 2px !important
+  margin-right: 2px
 
 .v-list--nav.v-list--dense .v-list-item:not(:last-child):not(:only-child),
 .v-list--nav .v-list-item--dense:not(:last-child):not(:only-child),
 .v-list--rounded.v-list--dense .v-list-item:not(:last-child):not(:only-child),
 .v-list--rounded .v-list-item--dense:not(:last-child):not(:only-child)
-  margin-bottom: 3px !important
+  margin-bottom: 3px
 
-// .v-list-item .v-list-item__title, .v-list-item .v-list-item__subtitle
-//   line-height: 1.2
-//   font-weight: 300
-//   font-size: 14px
-
-.v-list--nav .v-list-item-title
+.v-list-item .v-list-item__title, .v-list-item .v-list-item__subtitle
   line-height: 1.2 !important
   font-weight: 300 !important
   font-size: 14px !important
@@ -54,20 +49,20 @@
 .v-list-item__icon
   margin: 12px 0
 
-.v-list-item--active:hover::before, .v-list-item--active::before
+.theme--dark.v-list-item--active:hover::before, .theme--dark.v-list-item--active::before
   opacity: 0
 
 .v-navigation-drawer
-  // background-color: rgba(0,0,0,.87) !important
   .v-list-item__content
     transition: all 0.3s linear 0s
 
 .v-list--nav
-  padding-left: 15px
-  padding-right: 15px
+  padding-left: 0px
+  padding-right: 0px
 
+// .theme--dark.v-navigation-drawer .v-divider
 .v-navigation-drawer .v-divider
-  background-color: rgba(181, 181, 181, 0.2) !important
-  border-color: rgba(181, 181, 181, 0.1) !important
+  background-color: rgba(181, 181, 181, 0.2)
+  border-color: rgba(181, 181, 181, 0.1)
   width: calc(100% - 30px)
   margin-left: 15px
