fix: route error when login

--- a/web/src/styles/vuetify-material/_sidebar.sass
+++ b/web/src/styles/vuetify-material/_sidebar.sass
@@ -30,7 +30,7 @@
 .v-list--rounded .v-list-item--dense:not(:last-child):not(:only-child)
   margin-bottom: 3px
 
-.v-list-item .v-list-item__title, .v-list-item .v-list-item__subtitle
+.v-list-item .v-list-item-title, .v-list-item .v-list-item__subtitle
   line-height: 1.2 !important
   font-weight: 300 !important
   font-size: 14px !important
@@ -38,9 +38,9 @@
 .v-list-group__items .v-list-item
   font-size: 13px
   margin-bottom: 5px !important
-  .v-list-item__title
+  .v-list-item-title
     font-size: 13px
-    .v-list-item__icon
+    .v-list-item-icon
       margin-top: 14px
 
 .v-list-group__items .v-list-group--sub-group .v-list-group__header .v-list-item__icon--text
