feat: list item subtitle

--- a/web/src/styles/vuetify-material/_sidebar.sass
+++ b/web/src/styles/vuetify-material/_sidebar.sass
@@ -30,7 +30,7 @@
 .v-list--rounded .v-list-item--dense:not(:last-child):not(:only-child)
   margin-bottom: 3px
 
-.v-list-item .v-list-item-title, .v-list-item .v-list-item__subtitle
+.v-list-item .v-list-item-title, .v-list-item .v-list-item-subtitle
   line-height: 1.2 !important
   font-weight: 300 !important
   font-size: 14px !important
