feat: web input size and pagination

--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -1,5 +1,6 @@
 // Place SASS variable overrides here
 $font-size-root: 14px;
+$input-font-size: 10px;
 $sheet-border-radius: 4px;
 $list-item-title-font-size: 0.929rem;
 $list-item-dense-title-font-size: 0.929rem;
