--- a/web/src/styles/vuetify-material/_view.sass
+++ b/web/src/styles/vuetify-material/_view.sass
@@ -10,6 +10,12 @@
 .v-application .black--text
   color: #333 !important
 
+.v-application .primary--text
+  color: #4caf50 !important
+  caret-color: #4caf50 !important
+  font-weight: 400
+  font-size: 17px
+
 .v-application .small
   font-weight: 300
   line-height: 2rem
@@ -21,3 +27,6 @@
     .container--fluid
       padding-left: 15px
       padding-right: 15px
+
+.v-field__input
+  font-size: 14px
