style: tbl, select no of rows dropdown

--- a/web/src/styles/vuetify-material/_appbar.sass
+++ b/web/src/styles/vuetify-material/_appbar.sass
@@ -51,4 +51,6 @@
       font-size: 13px
 
 .v-navigation-drawer .v-icon.v-icon
-  font-size: 24px
+  font-size: 20px
+  // font-size: 24px
+  // opacity: 0.9
