feat: upgrade to vuetify 3.0.0beta.0

--- a/web/src/styles/vuetify-material/_appbar.sass
+++ b/web/src/styles/vuetify-material/_appbar.sass
@@ -6,7 +6,8 @@
 // -----------------------
 .v-toolbar__content,
 .v-toolbar__extension
-  padding: 0px 15px 0 31px
+  padding: 0px 0px 0 15px
+  // padding: 0px 15px 0 31px
 
 .v-sheet
   .v-toolbar__content
