feat: paginated tbl column types

--- a/web/src/styles/vuetify-material/_appbar.sass
+++ b/web/src/styles/vuetify-material/_appbar.sass
@@ -15,17 +15,18 @@
     .v-btn.v-size--large:not(.v-btn--icon):not(.v-btn--fab)
       margin-bottom: 5px
       padding: 10px 15px !important
-    .theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined)
+    .v-theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined)
       background-color: #fff
       .v-icon
         color: #999
 
-.theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined)
+.v-theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined)
   background-color: #fff
-  margin-right: 17px
+  margin-right: 0px
+  // margin-right: 17px
   margin-bottom: 2px
 
-.theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined):hover
+.v-theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined):hover
   background-color: #fff
 
 .v-toolbar__content
@@ -33,9 +34,9 @@
 
 .v-toolbar__content .v-btn--flat
   .v-icon
-    margin-right: 3px
+    margin-right: 0px
 
-.theme--light.v-label
+.v-theme--light.v-label
   color: rgba(0, 0, 0, 0.3)
 
 .v-menu__content .v-list--nav
