--- a/web/src/styles/vuetify-material/_buttons.sass
+++ b/web/src/styles/vuetify-material/_buttons.sass
@@ -59,7 +59,7 @@
 .v-btn-toggle > .v-btn.v-size--default
   height: inherit
 
-.theme--light.v-btn-toggle .v-btn.v-btn
+.v-theme--light.v-btn-toggle .v-btn.v-btn
   border-color: #999 !important
   &.primary
     border-color: #e91e63 !important
