--- a/web/src/styles/vuetify-material/_card.sass
+++ b/web/src/styles/vuetify-material/_card.sass
@@ -46,13 +46,13 @@
   padding-top: 7px
   padding-bottom: 2px
 
-.theme--light
+.v-theme--light
   .v-card > .v-card__text
     color: #333
   .card-title
     color: #3c4858
 
-.theme--dark
+.v-theme--dark
   .card-title
     color: #fff
 
@@ -65,7 +65,7 @@
   .v-card__actions
     .v-btn
       margin-right: 0 !important
-  .v-tabs .v-tab--active:hover::before, .theme--light.v-tabs .v-tab--active::before
+  .v-tabs .v-tab--active:hover::before, .v-theme--light.v-tabs .v-tab--active::before
     opacity: 0
   .v-tabs .v-tab:hover::before
     opacity: 0
