--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -11,11 +11,11 @@
   &:not(.v-btn--icon):not(.v-btn--fab)
     padding: 0 30px !important
 
-.theme--light.v-list-item .v-list-item__action-text,
-.theme--light.v-list-item .v-list-item__subtitle
+.v-theme--light.v-list-item .v-list-item__action-text,
+.v-theme--light.v-list-item .v-list-item__subtitle
   color: #999
 
-.theme--light.v-text-field>.v-input__control>.v-input__slot:before
+.v-theme--light.v-text-field>.v-input__control>.v-input__slot:before
   border-color: #d2d2d2
 
 .v-input__details
@@ -26,4 +26,4 @@
   font-size: 14px
 
 .theme--light .v-container
-  background-color: #eee !important
+  background-color: #eee
