--- a/web/src/styles/vuetify-material/_appbar.sass
+++ b/web/src/styles/vuetify-material/_appbar.sass
@@ -21,13 +21,14 @@
         color: #999
 
 .v-theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined)
-  background-color: #fff
+  // background-color: #fff
+  background-color: transparent
   margin-right: 0px
   // margin-right: 17px
   margin-bottom: 2px
 
 .v-theme--light.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined):hover
-  background-color: #fff
+  background-color: #6354406e
 
 .v-toolbar__content
   height: 75px
