feat: notification and icons

--- a/web/src/styles/overrides.sass
+++ b/web/src/styles/overrides.sass
@@ -5,6 +5,7 @@
 @import vuetify-material/card
 @import vuetify-material/tab
 @import vuetify-material/buttons
+@import vuetify-material/notification
 
 .v-btn.v-size--default,
 .v-btn.v-size--large
