--- a/web/src/styles/vuetify-material/_view.sass
+++ b/web/src/styles/vuetify-material/_view.sass
@@ -30,3 +30,10 @@
 
 .v-field__input
   font-size: 14px
+
+.v-messages
+  flex: 0 1 auto !important
+  font-size: 10px !important
+  min-height: 14px
+  min-width: 1px
+  position: relative
