--- a/web/src/styles/vuetify-material/_view.sass
+++ b/web/src/styles/vuetify-material/_view.sass
@@ -10,11 +10,47 @@
 .v-application .black--text
   color: #333 !important
 
+.v-application .text--disabled
+  color: rgba(0,0,0,.38)!important
+
 .v-application .primary--text
   color: #4caf50 !important
   caret-color: #4caf50 !important
   font-weight: 400
   font-size: 17px
+
+.v-application .success--text
+  color: #4caf50 !important
+  caret-color: #4caf50 !important
+  font-weight: 400
+  font-size: 17px
+
+.v-application .info--text
+  color: #00cae3 !important
+  caret-color: #00cae3 !important
+  font-weight: 400
+  font-size: 17px
+
+.v-application .warning--text
+  color: #fb8c00 !important
+  caret-color: #fb8c00 !important
+  font-weight: 400
+  font-size: 17px
+
+.v-application .danger--text
+  color: #f60b1e !important
+  caret-color: #f60b1e !important
+  font-weight: 400
+  font-size: 17px
+
+.v-application .info--text
+  color: #00cae3 !important
+  caret-color: #00cae3 !important
+  font-weight: 400
+  font-size: 17px
+
+.v-application p
+  margin-bottom: 16px
 
 .v-application .small
   font-weight: 300
